manifest/news-backend.yml
apiVersion: v1
kind: Service
metadata:
   name: news-backend
   labels:
     app: news-backend
spec:
   ports:
   - port: 80
     targetPort: 8888
     name: http
   selector:
     app: news-backend

---

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#    name: news-backend-v1
# spec:
#    replicas: 2
#    minReadySeconds: 15
#    strategy:
#      type: RollingUpdate
#      rollingUpdate: 
#        maxUnavailable: 1
#        maxSurge: 2
#    selector:
#      matchLabels:
#        app: news-backend
#        version: v1
#    template:
#      metadata:
#        labels:
#          app: news-backend
#          version: v1
#      spec:
#        containers:
#        - name: news-backend
#          image: news-backend:v1
#          ports:
#          - containerPort: 8888
#          volumeMounts:
#          - name: news-volume
#            mountPath: /images
#          resources:
#            requests:
#              memory: "512Mi"
#              cpu: "750m"
#            limits:
#              memory: "2048Mi"
#              cpu: "1000m"
#        initContainers: #необходимо дождаться запуска БД.
#          - name: init-mongo
#            image: busybox
#            command: ['sh', '-c', 'until nslookup mongo; do echo waiting for mongo; sleep 2; done;']
#        volumes: #для хранения фоток
#          - name: news-volume
#            persistentVolumeClaim:
#             claimName: news-pvc

---


apiVersion: apps/v1
kind: Deployment
metadata:
   name: news-backend-v2
spec:
   replicas: 1
   minReadySeconds: 15
   strategy:
     type: RollingUpdate
     rollingUpdate: 
       maxUnavailable: 1
       maxSurge: 1 
   selector:
     matchLabels:
       app: news-backend
       version: v2
   template:
     metadata:
       labels:
         app: news-backend
         version: v2
     spec:
       containers:
       - name: news-backend
         image: news-backend:v2
         ports:
         - containerPort: 8888
         volumeMounts:
         - name: news-volume
           mountPath: /images
         resources:
           requests:
             memory: "512Mi"
             cpu: "250m"
           limits:
             memory: "1024Mi"
             cpu: "500m"
       initContainers: #необходимо дождаться запуска БД.
         - name: init-mongo
           image: busybox
           command: ['sh', '-c', 'until nslookup mongo; do echo waiting for mongo; sleep 2; done;']
       volumes: #для хранения фоток
         - name: news-volume
           persistentVolumeClaim:
            claimName: news-pvc


# apiVersion: extensions/v1beta1
# kind: Deployment
# metadata:
#    name: project-orange
# spec:
#    replicas: 1
#    minReadySeconds: 15
#    strategy:
#     type: RollingUpdate
#     rollingUpdate: 
#       maxUnavailable: 1
#       maxSurge: 1 
#    template:
#      metadata:
#        labels:
#          app: project
#          version: v2
#          run: project
#      spec:
#        containers:
#        - name: project
#          image: project:v2
#          ports:
#          - containerPort: 8888
#          volumeMounts:
#          - name: project-volume
#            mountPath: /images
#          resources:
#            requests:
#              memory: "512Mi"
#              cpu: "750m"
#            limits:
#              memory: "2048Mi"
#              cpu: "1000m"
#        initContainers: #необходимо дождаться запуска БД.
#          - name: init-mongo
#            image: busybox
#            command: ['sh', '-c', 'until nslookup mongo; do echo waiting for mongo; sleep 2; done;']
#        volumes: #для хранения фоток
#          - name: project-volume
#            persistentVolumeClaim:
#             claimName: project-pvc
