manifest/destination_rules.yml
#балансировка нагрузки с матчингом по заголовку(version в данном случае)
#результат - запросы с одинаковым значением поля version в заголовке 
#попадут в один и тот же экземпляр сервиса.

# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: project
# spec:
#   host: project
#   trafficPolicy:
#     loadBalancer:
#       consistentHash:
#         httpHeaderName: version   # 1



apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: project
spec:
  host: project
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
