manifest/virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: project-external-services
spec:
  hosts:
  - "*"
  gateways:
  - http-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: project
        subset: v2
        port:
          number: 80
      weight: 30
    - destination:
        host: project
        subset: v1
        port:
          number: 80
      weight: 70
        


    # mirror:             ## A/B testing(Mirroring)
    #   host: project     
    #   subset: v1
    #   port:
    #     number: 80
                          # End A/B testing

---

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---

# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: project
# spec:
#   hosts:
#     - project          
#   http:
#   - route:
#     - destination:
#        host: project  
#        subset: v2
#     # mirror:             
#     #   host: project     
#     #   subset: v1
